Improve stream processing and hash map creation